<resources>
    <string name="app_name">Kids Math</string>
    <string name="welcome_to_math_game">Welcome to Math Game </string>
    <string name="try_it">Try It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionGuide">Total 3 questions for each level</string>
    <string name="history_scores">History scores</string>
    <string name="user_name">Name:%s </string>
    <string name="user_age">Age</string>
    <string name="user_score">Score:%s </string>
    <string name="user_level">level:%s </string>
    <string name="clear_top_record">Clear Top Record</string>
    <string name="back">Back</string>
    <string name="top_scores">Top Scores</string>
    <string name="play_again">Play Again</string>
    <string name="question_index">Question: %d</string>
    <string name="cat_message">Time for a break! Your cat sent you a message:\n I took some selfies—purr-fect,  Check them out!</string>
    <string name="question_will_appear_here">Question will appear here</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="question_1">Question 1</string>
    <string name="your_answer">Your answer</string>
    <string name="play">Play</string>
    <string name="top_score">Top Score</string>
    <string name="scores">Scores</string>
    <string name="my_cat">My Cat</string>
    <string name="cat_image">cat image</string>
    <string name="welcome_message">welcome message</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="beginner">Beginner</string>
    <string name="advanced">Advanced</string>
    <string name="start_game">Start Game</string>
    <string name="back_set">Back</string>


</resources>