<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <!-- Declare the ViewModel here for data binding -->
        <variable
            name="viewModel"
            type="au.edu.jcu.kidsmath.activities.gameactivity.GameActivityViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/questionNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/questionNumberTextView"
            android:text="@string/question_will_appear_here"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/answerEditText"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_below="@id/questionTextView"
            android:autofillHints="your_answer"
            android:hint="@string/your_answer"
            android:inputType="number"
            android:textColor="#42759E" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/answerEditText"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/skipButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_alignBaseline="@id/submitButton"
            android:layout_toEndOf="@id/submitButton"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:layout_alignBaseline="@id/submitButton"
            android:layout_toEndOf="@id/skipButton"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/submitButton"
            android:layout_marginTop="24dp"/>

    </RelativeLayout>
</layout>
