<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/topScoresTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/top_scores"
        android:textColor="#3E0B98"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scoresListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/clearTopRecordButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/clear_top_record" />

        <Button
            android:id="@+id/TopScoreBackButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/back" />

    </LinearLayout>

</LinearLayout>
</layout>